Fix blurry menu issue (#24)

--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -136,12 +136,14 @@
 				animation: menuOpen 150ms ease-out forwards 1;
 				// animation: menuOpen 250ms cubic-bezier(.52,.03,.45,2.32) forwards 1;
 				transform-origin: 50% 0;
+				filter: blur(0);   // fixes blurry layer issue in Chrome
 				z-index: 750;
 
 				@keyframes menuOpen {
 					from {
 						opacity: 0;
 						transform: translateX(-50%) perspective(1000px) rotateX(-45deg);	//  scaleY(.9)
+						filter: blur(0.00001px);
 					}
 				}
 
